--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 language: python
 python:
   - 3.6
-  - 3.7
-  - 3.8
-  - 3.9
+  #- 3.7
+  #- 3.8
+  #- 3.9
 arch:
-  - amd64
+  #- amd64
   - arm64
 
 before_install:
@@ -77,7 +77,7 @@ deploy:
   file_glob: true
   skip_cleanup: true
   on:
-    repo: moderngl/moderngl
+    repo: Hirni-Meshram5/moderngl
     tags: true
 
 env:
