--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,8 @@ install:
 script:
   - python3 setup.py install
   - python3 -m pip install pytest
+  - python3 -m cibuildwheel --output-dir ./wheelhouse
+  - ls wheelhouse
 
 stages:
   - test
@@ -77,7 +79,7 @@ deploy:
   file_glob: true
   skip_cleanup: true
   on:
-    repo: Hirni-Meshram5/moderngl
+    repo: moderngl/moderngl
     tags: true
 
 env:
@@ -86,4 +88,5 @@ env:
   - CIBW_BUILD=cp3?-*
   - CIBW_MANYLINUX_X86_64_IMAGE=manylinux1
   - CIBW_MANYLINUX_I686_IMAGE=manylinux1
+  - CIBW_MANYLINUX_AARCH64_IMAGE=manylinux2014
   - TWINE_USERNAME=__token__
