--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,9 @@
 language: python
-python: 3.6
-  #- 3.6
-  #- 3.7
-  #- 3.8
-  #- 3.9
-arch:
-  - amd64
-  - arm64
+python:
+  - 3.6
+  - 3.7
+  - 3.8
+  - 3.9
 
 before_install:
   - |
@@ -23,8 +20,67 @@ install:
 script:
   - python3 setup.py install
   - python3 -m pip install pytest
-  - python3 -m cibuildwheel --output-dir ./wheelhouse
-  - ls wheelhouse
+
+stages:
+  - test
+  - name: deploy
+    if: tag IS PRESENT AND repo = moderngl/moderngl
+
+jobs:
+  include:
+  - os: windows
+    language: shell
+    name: Test on Windows
+    
+  - os: osx
+    language: shell
+    name: Test on MacOS
+    
+  - os: linux
+    arch: arm64
+    language: shell
+    name: Test on Linux for aarch64
+    
+  - stage: deploy
+    services: docker
+    install: python3 -m pip install twine cibuildwheel
+    script:
+    - python3 -m cibuildwheel --output-dir ./wheelhouse
+    - python3 setup.py sdist -d ./wheelhouse
+    - ls wheelhouse
+    after_success: |
+      if [[ $TRAVIS_TAG ]]; then python3 -m pip install twine; python3 -m twine upload --skip-existing wheelhouse/*.whl; fi
+  - stage: deploy
+    os: osx
+    language: shell
+    install: python3 -m pip install twine cibuildwheel
+    script:
+    - python3 -m cibuildwheel --output-dir ./wheelhouse
+    - ls wheelhouse
+    after_success: |
+      if [[ $TRAVIS_TAG ]]; then python3 -m pip install twine; python3 -m twine upload --skip-existing wheelhouse/*.whl; fi
+  
+  - stage: deploy
+    os: windows
+    language: shell
+    install: python3 -m pip install twine cibuildwheel
+    script:
+    - python3 -m cibuildwheel --output-dir ./wheelhouse
+    - ls wheelhouse
+    after_success: |
+      if [[ $TRAVIS_TAG ]]; then python3 -m pip install twine; python3 -m twine upload --skip-existing wheelhouse/*.whl; fi
+      
+  - stage: deploy
+    os: linux
+    arch: arm64
+    language: shell
+    install: python3 -m pip install twine cibuildwheel
+    script:
+    - python3 -m cibuildwheel --output-dir ./wheelhouse
+    - ls wheelhouse
+    after_success: |
+      if [[ $TRAVIS_TAG ]]; then python3 -m pip install twine; python3 -m twine upload --skip-existing wheelhouse/*.whl; fi      
+
 
 deploy:
   provider: releases
