--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_install:
     fi
 
 install:
-- python3 -m pip install twine cibuildwheel
+- python -m pip install twine cibuildwheel
 
 script:
   - python3 setup.py install
